--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Philosopher's Games</title>
 </head>
 <body>
-    <h1>Contact US</h1>
+    <h1>If you have any issues please contact us here : philosophersgames@gmail.com </h1>
 </body>
 </html>
